<resources>
    <string name="app_name">chikins</string>
    <string name="status_stopped">chikins are not running</string>
    <string name="status_running">chikins are running</string>
    <string name="start_chickens">start chikins</string>
    <string name="stop_chickens">stop chikins</string>
    <string name="help_button">?</string>
    <string name="help_title">chikins</string>
    <string name="kill_all_but_one">cull all but one chikin</string>
    <string name="max_chikins_label">max chikins</string>
    <string name="show_feed_bag">show feed bag</string>
    <string name="spawn_test_chick">spawn test chick</string>
</resources>
